--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <title>For Legacy Investment Ltd</title>
   <meta name="description" content="For Legacy Investment Ltd - Expert business succession planning and legacy preservation for retiring entrepreneurs. We help preserve your business legacy and ensure continued growth.">
   <meta name="keywords" content="Business Legacy, Succession Planning, Retirement Planning, Business Acquisition, Family Business, Construction Business, Business Transition, Legacy Preservation">
+  <meta name="google-site-verification" content="your-verification-code">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -383,7 +386,7 @@
               At For Legacy Investment, we are dedicated to acquiring and nurturing well-established businesses, particularly from owners who are looking to retire. We understand the emotional and financial significance of these businesses, and our mission is to continue their legacy by maintaining their core values, brand identity, and long-term success.
             </p>
             <ul>
-              <li><i class="bi bi-check2-all"></i> <span><strong>Stewardship over Ownership:</strong> We don’t just acquire businesses, we take on the responsibility of preserving their legacy. Our focus is on safeguarding the values and brands built over generations.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span><strong>Stewardship over Ownership:</strong> We don't just acquire businesses, we take on the responsibility of preserving their legacy. Our focus is on safeguarding the values and brands built over generations.</span></li>
               <li><i class="bi bi-check2-all"></i> <span><strong>Long-Term Investment:</strong> Our approach is to hold businesses for the long run—over decade's ensuring stability, sustained growth, and innovation. We believe in building on success rather than selling off assets.</span></li>
               <li><i class="bi bi-check2-all"></i> <span><strong>Focused Growth:</strong> We carefully expand into new business models only when we have mastered our current focus areas, allowing for controlled, sustainable growth.</span></li>
             </ul>
@@ -714,7 +717,7 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">For Legacy</strong> <span>All Rights Reserved</span></p>
         <div class="credits">
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div      </div>
+        </div>      </div>
     </div>
   </footer>
 
