--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       <nav id="navmenu" class="navmenu">
         <ul>
             <li><a href="#hero" class="active">Home</a></li>
-            <li><a href="#features">About</a></li>
-            <li><a href="#team">Team</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="team.html">Team</a></li>
             <li><a href="https://blog.forlegacy.co.uk" target="_blank" rel="noopener noreferrer">Blog</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -115,12 +115,14 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-      <img src="assets/img/hero-bg.jpg" alt="For Legacy business transition services hero image" data-aos="fade-in">
+      <video autoplay muted loop playsinline class="hero-video">
+        <source src="assets/video/hero-bg.mp4" type="video/mp4">
+      </video>
       <div class="container">
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
-            <h2>Retire & Preserve Your Business Legacy<span>.</span></h2>
-            <p>We help successful removal company owners plan their retirement while ensuring their business, team, and customers are taken care of for generations to come.</p>
+            <h2 class="text-white">We help removal company owners retire<span>.</span></h2>
+            <p class="text-white">We buy their business—whilst protecting their Name, Team, and Relationships.</p>
           </div>
         </div>
 
@@ -139,22 +141,19 @@
           </div>
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
-              <i class="bi bi-graph-up-arrow"></i>
-              <h3><a href="#services">Continue Growth</a></h3>
+              <i class="bi bi-people"></i>
+              <h3><a href="#services">Maintain Relationships</a></h3>
             </div>
           </div>
-          <!-- <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon-box">
-              <i class="bi bi-card-list"></i>
-              <h3><a href="">Businesses</a></h3>
-            </div>
+        </div>
+
+        <div class="row justify-content-center mt-5" data-aos="fade-up" data-aos-delay="600">
+          <div class="col-auto">
+            <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" class="hero-cta-btn">
+              <span>Find Out How</span>
+              <i class="bi bi-arrow-right"></i>
+            </a>
           </div>
-          <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="700">
-            <div class="icon-box">
-              <i class="bi bi-gem"></i>
-              <h3><a href="#team">Sale</a></h3>
-            </div>
-          </div> -->
         </div>
       </div>
     </section><!-- /Hero Section -->
@@ -169,7 +168,9 @@
         </div>
 
         <div class="row gy-4">
-          <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100"><img src="assets/img/features-bg.jpg" alt=""></div>
+          <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <img src="assets/img/retirement.jpg" alt="Retirement and business succession planning" class="img-fluid">
+          </div>
           <div class="col-lg-6">
 
             <div class="features-item d-flex ps-0 ps-lg-3 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="200">
@@ -306,7 +307,7 @@
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
 
-      <img src="assets/img/cta-bg.jpg" alt="">
+      <img src="assets/img/valuation.jpg" alt="Business valuation background">
 
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
@@ -314,200 +315,16 @@
             <div class="text-center">
               <h3>How Much Is Your Business Worth?</h3>
               <p>Use our free business valuation calculator to get an estimate of your business's value and see how we can help preserve your legacy.</p>
-              <a class="cta-btn" href="https://business-valuation-calculator-daniel859.replit.app" target="_blank">Free Valuation Calculator</a>
+              <a class="hero-cta-btn" href="valuation.html">
+                <span>Value Your Business</span>
+                <i class="bi bi-calculator"></i>
+              </a>
             </div>
           </div>
         </div>
       </div>
 
     </section><!-- /Call To Action Section -->
-    <!-- Team Section -->
-    <section id="team" class="team section">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Meet Our Team</h2>
-        <p>The People Behind For Legacy</p>
-      </div>
-      <div class="container">
-        <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="col-12">
-            <h4>
-              We understand that legacy and family are deeply intertwined. Our two founders, a father and son duo, are passionate about the ties that come with starting and continuing a business together.
-            </h4>
-            <br>
-          </div>
-        </div>
-        <div class="row gy-4">
-          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="team-member">
-              <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="https://x.com/danieljsmythe" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
-                  <a href="https://www.linkedin.com/in/danieljsmythe" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Daniel Smythe</h4>
-                <span>Founder & CEO</span>
-                <p>Daniel brings extensive experience in scaling 4 multi million pound tech businesses, driving innovation and growth to the companies we acquire.</p>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="team-member">
-              <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="https://www.linkedin.com/in/ashtonpaul26/" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-                <div class="member-info">
-                  <h4>Ashton Smythe</h4>
-                  <span>Co-Founder & CMO</span>
-                  <p>With over 36 years of experience in the construction industry, Ashton is passionate about preserving business legacies.</p>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-        </div>
-      </div>
-    </section><!-- /Team Section -->
-
-    <!-- About Section -->
-    <section id="about" class="about section">
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row gy-4">
-          <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/about.jpg" class="img-fluid" loading="lazy" alt="">
-          </div>
-          <div class="col-lg-6 order-2 order-lg-1 content">
-            <h3>More About Us</h3>
-            <p>
-              At For Legacy Investment, we are dedicated to acquiring and nurturing well-established businesses, particularly from owners who are looking to retire. We understand the emotional and financial significance of these businesses, and our mission is to continue their legacy by maintaining their core values, brand identity, and long-term success.
-            </p>
-            <ul>
-              <li><i class="bi bi-check2-all"></i> <span><strong>Stewardship over Ownership:</strong> We don't just acquire businesses, we take on the responsibility of preserving their legacy. Our focus is on safeguarding the values and brands built over generations.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span><strong>Long-Term Investment:</strong> Our approach is to hold businesses for the long run—over decade's ensuring stability, sustained growth, and innovation. We believe in building on success rather than selling off assets.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span><strong>Focused Growth:</strong> We carefully expand into new business models only when we have mastered our current focus areas, allowing for controlled, sustainable growth.</span></li>
-            </ul>
-            <p>
-              With over 36 years of experience in construction and a proven track record in scaling multimillion-pound companies, we combine industry expertise and cutting-edge technology to help businesses continue their growth. At For Legacy, we are committed to building lasting partnerships and ensuring that your hard-earned business thrives well into the future.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section><!-- /About Section -->
-
-    <!-- Services Section -->
-    <section id="services" class="services section">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Our Principles</h2>
-        <p>How we operate</p>
-      </div>
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item position-relative text-center">
-              <h3>Buy Businesses</h3>
-              <div class="icon mt-3">
-                <i class="bi bi-building"></i>
-              </div>
-              <p>We specialize in acquiring businesses from retiring owners, ensuring a smooth transition and the preservation of their legacy.</p>
-            </div>
-          </div><!-- End Service Item -->
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item position-relative text-center">
-              <h3>Invest in them</h3>
-              <div class="icon mt-3">
-                <i class="bi bi-graph-up-arrow"></i>
-              </div>
-              <p>Our team provides expert management to maintain and grow the businesses we acquire, leveraging decades of industry experience.</p>
-            </div>
-          </div><!-- End Service Item -->
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item position-relative text-center">
-              <h3>For the Long-Term</h3>
-              <div class="icon mt-3">
-                <i class="bi bi-clock-history"></i>
-              </div>
-              <p>We are committed to the long-term growth of the businesses we acquire, focusing on innovation and sustainable practices.</p>
-            </div>
-          </div><!-- End Service Item -->
-        </div>
-      </div>
-    </section><!-- /Services Section -->
-
-     <!-- Testimonials Section -->
-     <section id="testimonials" class="testimonials section dark-background">
-      <img src="assets/img/testimonials-bg.jpg" class="testimonials-bg" alt="">
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="swiper init-swiper">
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
-              }
-            }
-          </script>
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="Client testimonial" loading="lazy">
-                <h3>David Thompson</h3>
-                <h4>Thompson & Sons Removals</h4>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>After 35 years in the removal business, finding someone who values our legacy as much as we do was crucial. For Legacy ensured a smooth transition while maintaining our reputation for excellence.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sarah Richardson</h3>
-                <h4>Richardson's Moving Solutions</h4>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Our family business needed someone who understood the importance of maintaining relationships with long-term customers. For Legacy not only preserved these relationships but helped grow them further.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Michael Foster</h3>
-                <h4>Foster Removal Services</h4>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>What impressed me most was how For Legacy kept our entire team together during the transition. They understood that our staff's expertise was key to our success.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </div>
-    </section><!-- /Testimonials Section -->
 
     <!-- Stats Section -->
     <section id="stats" class="stats section">
@@ -561,8 +378,6 @@
         </div>
       </div>
     </section><!-- /Stats Section -->
-
-
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
@@ -631,35 +446,6 @@
       </div>
     </section><!-- /Contact Section -->
 
-  <!-- Vision and Journey Section -->
-    <section id="success-metrics" class="stats section">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-12">
-            <h3 class="mb-4">Our Vision and Journey So Far</h3>
-            <div class="success-timeline">
-              <div class="timeline-item">
-                <span class="year">2024</span>
-                <p>Started our journey</p>
-              </div>
-              <div class="timeline-item">
-                <span class="year">2025</span>
-                <p>First successful acquisition</p>
-              </div>
-              <div class="timeline-item">
-                <span class="year">2026</span>
-                <p>Expand to 5 businesses</p>
-              </div>
-              <div class="timeline-item">
-                <span class="year">2028 & beyond</span>
-                <p>£10M+ combined cashflow </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
 </main>
 
   <footer id="footer" class="footer dark-background">
@@ -687,13 +473,12 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#hero">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#team">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#services">Principles</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="about.html">About us</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="team.html">Our Team</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="https://blog.forlegacy.co.uk" target="_blank" rel="noopener noreferrer">Blog</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="/privacy-policy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a></li>
-
-
-
+              <li><i class="bi bi-chevron-right"></i> <a href="valuation.html">Business Valuation</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="vision.html">Our Vision</a></li>
             </ul>
           </div>
           <div class="col-lg-2 col-md-3 footer-links">
@@ -797,11 +582,10 @@
 
 </body>
 
-</html>
-
-<div class="floating-contact">
+</html><div class="floating-contact">
   <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" class="floating-btn">
     <i class="bi bi-chat-dots"></i>
     <span>Let's Talk</span>
   </a>
 </div>
+
