--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
             <h2 class="text-white">We help removal company owners retire<span>.</span></h2>
-            <p class="text-white">We buy their business—whilst protecting their Name, Team, and Relationships.</p>
+            <p class="text-white">We buy their business—whilst protecting their name, team, and relationships.</p>
           </div>
         </div>
 
