--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
         <div class="row gy-4">
           <!-- For Legacy Column -->
           <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="comparison-card positive">
+            <div class="comparison-card positive featured-card">
+              <div class="best-choice-banner">Best Choice</div>
               <div class="card-header">
                 <div class="icon">
                   <i class="bi bi-award-fill"></i>
@@ -231,12 +232,18 @@
                 <h3>For Legacy</h3>
               </div>
               <div class="card-body">
-                <div class="feature-item positive">Retirement</div>
-                <div class="feature-item positive">Cash Payout</div>
-                <div class="feature-item positive">Flexible 30-day process</div>
-                <div class="feature-item positive">Operate as-is with no culture change</div>
-                <div class="feature-item positive">Legacy protected</div>
-                <div class="feature-item positive">Holds companies for the long term</div>
+                <div class="feature-item positive highlight">Retirement</div>
+                <div class="feature-item positive highlight">Cash Payout</div>
+                <div class="feature-item positive highlight">Flexible 30-day process</div>
+                <div class="feature-item positive highlight">Operate as-is with no culture change</div>
+                <div class="feature-item positive highlight">Legacy protected</div>
+                <div class="feature-item positive highlight">Holds companies for the long term</div>
+                <div class="cta-wrapper mt-4">
+                  <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" class="btn-getstarted">
+                    Start Your Journey
+                    <i class="bi bi-arrow-right ms-2"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
