SEO improvements and icon
changed the favicon and seo

--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>For Legacy Investment Ltd</title>
   <meta name="description" content="For Legacy Investment Ltd - Expert business succession planning and legacy preservation for retiring entrepreneurs. We help preserve your business legacy and ensure continued growth.">
-  <meta name="keywords" content="Business Legacy, Succession Planning, Retirement Planning, Business Acquisition, Family Business, Construction Business, Business Transition, Legacy Preservation">
-  <meta name="google-site-verification" content="your-verification-code">
+  <meta name="keywords" content="Business Legacy, Legacy Preservation, Business Transition, Stewardship Acquisition, Succession Planning, Boomer Business Transition, Family Business, Construction Business, Retirement Planning, Business Acquisition, Long-Term Business Growth, Generational Business Transfer">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
