--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>For Legacy Investment Ltd</title>
-  <meta name="description" content="For Legacy Investment Ltd - Expert business succession planning and legacy preservation for retiring entrepreneurs. We help preserve your business legacy and ensure continued growth.">
+  <meta name="description" content="“For Legacy – Expert business succession solutions for retiring owners. We buy businesses directly, preserving your legacy, business name, and operations with a seamless, stress-free transition.">
   <meta name="keywords" content="Business Legacy, Legacy Preservation, Business Transition, Stewardship Acquisition, Succession Planning, Boomer Business Transition, Family Business, Construction Business, Retirement Planning, Business Acquisition, Long-Term Business Growth, Generational Business Transfer">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://forlegacy.co.uk/">
 
   <!-- Favicons -->
   <link rel="icon" type="image/png" href="assets/img/favicon.png">
@@ -95,6 +98,28 @@
   src="https://www.facebook.com/tr?id=3992042514384523&ev=PageView&noscript=1"
   /></noscript>
   <!-- End Meta Pixel Code -->
+
+  <!-- LinkedIn Insight Tag -->
+  <script type="text/javascript">
+    _linkedin_partner_id = "6868554";
+    window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+    window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+  </script>
+  <script type="text/javascript">
+    (function(l) {
+      if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])};
+      window.lintrk.q=[]}
+      var s = document.getElementsByTagName("script")[0];
+      var b = document.createElement("script");
+      b.type = "text/javascript";b.async = true;
+      b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+      s.parentNode.insertBefore(b, s);
+    })(window.lintrk);
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=6868554&fmt=gif" />
+  </noscript>
+  <!-- End LinkedIn Insight Tag -->
 
   </head>
 
