removing investment ltd

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About Us - For Legacy Investment Ltd</title>
-  <meta name="description" content="Learn more about For Legacy Investment Ltd - Our mission, values, and commitment to preserving business legacies.">
+  <title>About Us - For Legacy</title>
+  <meta name="description" content="Learn more about For Legacy - Our mission, values, and commitment to preserving business legacies.">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -105,7 +105,7 @@
           <div class="col-lg-6 order-2 order-lg-1 content">
             <h3>More About Us</h3>
             <p>
-              At For Legacy Investment, we are dedicated to acquiring and nurturing well-established businesses, particularly from owners who are looking to retire. We understand the emotional and financial significance of these businesses, and our mission is to continue their legacy by maintaining their core values, brand identity, and long-term success.
+              At For Legacy, we are dedicated to acquiring and nurturing well-established businesses, particularly from owners who are looking to retire. We understand the emotional and financial significance of these businesses, and our mission is to continue their legacy by maintaining their core values, brand identity, and long-term success.
             </p>
             <ul>
               <li><i class="bi bi-check2-all"></i> <span><strong>Stewardship over Ownership:</strong> We don't just acquire businesses, we take on the responsibility of preserving their legacy. Our focus is on safeguarding the values and brands built over generations.</span></li>
