--- a/sell-your-business.html
+++ b/sell-your-business.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>For Legacy Investment Ltd</title>
-  <meta name="description" content="For Legacy Investment Ltd - Expert business succession planning and legacy preservation for retiring entrepreneurs. We help preserve your business legacy and ensure continued growth.">
-  <meta name="keywords" content="Business Legacy, Succession Planning, Retirement Planning, Business Acquisition, Family Business, Construction Business, Business Transition, Legacy Preservation">
+  <meta name="description" content="“For Legacy – Expert business succession solutions for retiring owners. We buy businesses directly, preserving your legacy, business name, and operations with a seamless, stress-free transition.">
+  <meta name="keywords" content="Business Legacy, Legacy Preservation, Business Transition, Stewardship Acquisition, Succession Planning, Boomer Business Transition, Family Business, Construction Business, Retirement Planning, Business Acquisition, Long-Term Business Growth, Generational Business Transfer">
   <meta name="google-site-verification" content="your-verification-code">
 
   <!-- Favicons -->
