--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
         <div class="row justify-content-center mt-5" data-aos="fade-up" data-aos-delay="600">
           <div class="col-auto">
-            <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" class="hero-cta-btn">
+            <a href="https://calendly.com/forlegacy/intro?month=2024-10" class="hero-cta-btn">
               <span>Find Out How</span>
               <i class="bi bi-arrow-right"></i>
             </a>
@@ -468,7 +468,7 @@
                 <div class="feature-item positive highlight">Legacy protected</div>
                 <div class="feature-item positive highlight">Holds companies for the long term</div>
                 <div class="cta-wrapper mt-4">
-                  <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" class="btn-getstarted">
+                  <a href="https://calendly.com/forlegacy/intro?month=2024-10" class="btn-getstarted">
                     Start Your Journey
                     <i class="bi bi-arrow-right ms-2"></i>
                   </a>
@@ -895,7 +895,7 @@
 </body>
 
 </html><div class="floating-contact">
-  <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" class="floating-btn">
+  <a href="https://calendly.com/forlegacy/intro?month=2024-10" class="floating-btn">
     <i class="bi bi-chat-dots"></i>
     <span>Let's Talk</span>
   </a>
