--- a/leaflet.html
+++ b/leaflet.html
@@ -70,7 +70,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-      <a class="btn-getstarted" href="https://calendly.com/forlegacy/synergycall?month=2024-10">Get Started</a>
+      <a class="btn-getstarted" href="https://calendly.com/forlegacy/intro?month=2024-10">Get Started</a>
 
     </div>
   </header>
@@ -264,8 +264,8 @@
           <div class="col-xl-10">
             <div class="text-center">
               <h3>Be part of the 8%</h3>
-              <p>Ready to Secure Your Legacy? Don’t wait until it’s too late. With our expert team and commitment to preserving your business’s legacy, you can rest assured your company will continue to thrive long after you step away. Schedule a call today and learn how we can support you.</p>
-              <a class="cta-btn" href="https://calendly.com/forlegacy/synergycall?month=2024-10">Contact Us</a>
+              <p>Ready to Secure Your Legacy? Don't wait until it's too late. With our expert team and commitment to preserving your business's legacy, you can rest assured your company will continue to thrive long after you step away. Schedule a call today and learn how we can support you.</p>
+              <a class="cta-btn" href="https://calendly.com/forlegacy/intro?month=2024-10">Contact Us</a>
             </div>
           </div>
         </div>
@@ -560,7 +560,7 @@
             At For Legacy Investment, we are dedicated to acquiring and nurturing well-established businesses, particularly from owners who are looking to retire. We understand the emotional and financial significance of these businesses, and our mission is to continue their legacy by maintaining their core values, brand identity, and long-term success.
           </p>
           <ul>
-            <li><i class="bi bi-check2-all"></i> <span><strong>Stewardship over Ownership:</strong> We don’t just acquire businesses, we take on the responsibility of preserving their legacy. Our focus is on safeguarding the values and brands built over generations.</span></li>
+            <li><i class="bi bi-check2-all"></i> <span><strong>Stewardship over Ownership:</strong> We don't just acquire businesses, we take on the responsibility of preserving their legacy. Our focus is on safeguarding the values and brands built over generations.</span></li>
             <li><i class="bi bi-check2-all"></i> <span><strong>Long-Term Investment:</strong> Our approach is to hold businesses for the long run—over decade's ensuring stability, sustained growth, and innovation. We believe in building on success rather than selling off assets.</span></li>
             <li><i class="bi bi-check2-all"></i> <span><strong>Focused Growth:</strong> We carefully expand into new business models only when we have mastered our current focus areas, allowing for controlled, sustainable growth.</span></li>
           </ul>
