--- a/about.html
+++ b/about.html
@@ -205,7 +205,7 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <div class="floating-contact">
-    <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" class="floating-btn">
+    <a href="https://calendly.com/forlegacy/intro?month=2024-10" class="floating-btn">
       <i class="bi bi-chat-dots"></i>
       <span>Let's Talk</span>
     </a>
