--- a/sell-your-business.html
+++ b/sell-your-business.html
@@ -229,7 +229,7 @@
 
         <div class="row justify-content-center mt-5" data-aos="fade-up" data-aos-delay="600">
           <div class="col-auto">
-            <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" onclick="return gtag_report_conversion('https://calendly.com/forlegacy/synergycall?month=2024-10')" class="hero-cta-btn">
+            <a href="https://calendly.com/forlegacy/intro?month=2024-10" onclick="return gtag_report_conversion('https://calendly.com/forlegacy/intro?month=2024-10')" class="hero-cta-btn">
               <span>Find Out How</span>
               <i class="bi bi-arrow-right"></i>
             </a>
@@ -319,7 +319,7 @@
                 <div class="feature-item positive highlight">Legacy protected</div>
                 <div class="feature-item positive highlight">Holds companies for the long term</div>
                 <div class="cta-wrapper mt-4">
-                  <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" onclick="return gtag_report_conversion('https://calendly.com/forlegacy/synergycall?month=2024-10')" class="btn-getstarted">
+                  <a href="https://calendly.com/forlegacy/intro?month=2024-10" onclick="return gtag_report_conversion('https://calendly.com/forlegacy/intro?month=2024-10')" class="btn-getstarted">
                     Start Your Journey
                     <i class="bi bi-arrow-right ms-2"></i>
                   </a>
@@ -745,7 +745,7 @@
 
 <!-- Floating contact button -->
 <div class="floating-contact">
-  <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" onclick="return gtag_report_conversion('https://calendly.com/forlegacy/synergycall?month=2024-10')" class="floating-btn">
+  <a href="https://calendly.com/forlegacy/intro?month=2024-10" onclick="return gtag_report_conversion('https://calendly.com/forlegacy/intro?month=2024-10')" class="floating-btn">
     <i class="bi bi-chat-dots"></i>
     <span>Let's Talk</span>
   </a>
