updated with some text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Satoshi Variable Font -->
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@700,500,400&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -345,13 +348,13 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
       <video autoplay muted loop playsinline class="hero-video">
-        <source src="assets/video/hero-bg.mp4" type="video/mp4">
+        <source src="assets/video/google1.mp4" type="video/mp4">
       </video>
       <div class="container">
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
-            <h2 class="text-white">We help removal company owners retire<span>.</span></h2>
-            <p class="text-white">We buy their business—whilst protecting their name, team, and relationships.</p>
+            <h2 class="text-white">We help business owners retire<span>.</span></h2>
+            <p class="text-white">We buy their business - whilst protecting their name, team, and relationships.</p>
           </div>
         </div>
 
@@ -359,19 +362,19 @@
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <i class="bi bi-award"></i>
-              <h3><a href="#services">Preserve Legacy</a></h3>
+              <h3><a href="#services">Preserve legacy</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="icon-box">
               <i class="bi bi-shield"></i>
-              <h3><a href="#services">Protect People</a></h3>
+              <h3><a href="#services">Protect people</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
               <i class="bi bi-people"></i>
-              <h3><a href="#services">Maintain Relationships</a></h3>
+              <h3><a href="#services">Maintain relationships</a></h3>
             </div>
           </div>
         </div>
@@ -379,7 +382,7 @@
         <div class="row justify-content-center mt-5" data-aos="fade-up" data-aos-delay="600">
           <div class="col-auto">
             <a href="https://calendly.com/forlegacy/intro?month=2024-10" class="hero-cta-btn">
-              <span>Find Out How</span>
+              <span>Find out how</span>
               <i class="bi bi-arrow-right"></i>
             </a>
           </div>
@@ -392,8 +395,7 @@
 
       <div class="container">
         <div class="section-title" data-aos="fade-up">
-          <h2>For Founders</h2>
-          <p>What we Offer</p>
+          <h2>What we offer</h2>
         </div>
 
         <div class="row gy-4">
@@ -422,7 +424,7 @@
             <div class="features-item d-flex mt-5 ps-0 ps-lg-3" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-shield flex-shrink-0"></i>
               <div>
-                <h4>Stewardship over Ownership</h4>
+                <h4>Stewardship over ownership</h4>
                 <p>We see our selves as stewards of your amazing company we want to continue it and steward it for you. Why fix what isn't broken.</p>
               </div>
             </div><!-- End Features Item-->
@@ -430,7 +432,7 @@
             <div class="features-item d-flex mt-5 ps-0 ps-lg-3" data-aos="fade-up" data-aos-delay="500">
               <i class="bi bi-hourglass-split flex-shrink-0"></i>
               <div>
-                <h4>Long Term</h4>
+                <h4>Long term</h4>
                 <p>We are in this for the long term, we won't change the name or sell your business after buying it.</p>
               </div>
             </div><!-- End Features Item-->
@@ -445,8 +447,7 @@
     <!-- Why Sell to For Legacy Section -->
     <section id="why-sell" class="services section">
       <div class="container section-title" data-aos="fade-up">
-        <h2>Why Sell to For Legacy?</h2>
-        <p>Your options</p>
+        <h2>Why sell to For Legacy?</h2>
       </div>
       <div class="container">
         <div class="row gy-4">
@@ -469,7 +470,7 @@
                 <div class="feature-item positive highlight">Holds companies for the long term</div>
                 <div class="cta-wrapper mt-4">
                   <a href="https://calendly.com/forlegacy/intro?month=2024-10" class="btn-getstarted">
-                    Start Your Journey
+                    Start your journey
                     <i class="bi bi-arrow-right ms-2"></i>
                   </a>
                 </div>
@@ -619,7 +620,6 @@
     <section id="testimonials" class="testimonials section">
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-        <p>What Our Clients Say</p>
       </div>
 
       <div class="container position-relative">
@@ -634,7 +634,7 @@
                   </div>
                   <div class="profile-info ms-3">
                     <h3 class="mb-1">John Smith</h3>
-                    <h4 class="mb-1">Former Owner, Smith & Sons Removals</h4>
+                    <h4 class="mb-1">Former owner, Smith & Sons Removals</h4>
                     <div class="stars">
                       <i class="bi bi-star-fill"></i>
                       <i class="bi bi-star-fill"></i>
@@ -661,7 +661,7 @@
                   </div>
                   <div class="profile-info ms-3">
                     <h3 class="mb-1">Sarah Johnson</h3>
-                    <h4 class="mb-1">Previous Owner, Johnson Removals Ltd</h4>
+                    <h4 class="mb-1">Previous owner, Johnson Removals Ltd</h4>
                     <div class="stars">
                       <i class="bi bi-star-fill"></i>
                       <i class="bi bi-star-fill"></i>
@@ -688,7 +688,7 @@
                   </div>
                   <div class="profile-info ms-3">
                     <h3 class="mb-1">David Wilson</h3>
-                    <h4 class="mb-1">Former Director, Wilson Moving Solutions</h4>
+                    <h4 class="mb-1">Former director, Wilson Moving Solutions</h4>
                     <div class="stars">
                       <i class="bi bi-star-fill"></i>
                       <i class="bi bi-star-fill"></i>
@@ -719,8 +719,7 @@
     <!-- Contact Section -->
     <section id="contact" class="contact section">
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact Us</h2>
-        <p>Get in Touch</p>
+        <h2>Contact us</h2>
       </div>
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -742,14 +741,14 @@
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
-                <h3>Call Us</h3>
+                <h3>Call us</h3>
                 <p> +44 01342 893415</p>
               </div>
             </div><!-- End Info Item -->
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
               <i<i class="bi bi-envelope flex-shrink-0"></i>
               <div>
-                <h3>Email Us</h3>
+                <h3>Email us</h3>
                 <p>info@forlegacy.co.uk</p>
               </div>
             </div><!-- End Info Item -->
