--- a/valuation.html
+++ b/valuation.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Removal Company Valuation Calculator - For Legacy Investment Ltd</title>
-  <meta name="description" content="Free valuation calculator for removal companies. Get an instant estimate of your removal business's value with our easy-to-use tool.">
-  <meta name="keywords" content="Removal Company Valuation, Business Calculator, Removal Business Worth, Business Value Estimation">
+  <title>Company Valuation | For Legacy Investment Ltd</title>
+  <meta name="description" content="Free business valuation calculator. Get an instant estimate of your business's value with our easy-to-use tool.">
+  <meta name="keywords" content="Business Valuation, Company Valuation, Business Calculator, Business Worth, Business Value Estimation">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -18,6 +18,9 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Satoshi Variable Font -->
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@700,500,400&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -107,13 +110,13 @@
     <section class="calculator-section">
       <div class="calculator-container">
         <div class="calculator-intro" data-aos="fade-up">
-          <h1>Removal Company Valuation Calculator</h1>
-          <p>Get an instant estimate of your removal company's value with our free calculator. Simply answer a few questions about your business, and we'll provide you with a preliminary valuation range based on industry standards and market conditions.</p>
+          <h1>Business Valuation Calculator</h1>
+          <p>Get an instant estimate of your company's value with our free calculator. Simply answer a few questions about your business, and we'll provide you with a preliminary valuation range based on industry standards and market conditions.</p>
         </div>
         <div data-aos="fade-up" data-aos-delay="200">
           <iframe src="https://business-valuation-calculator-daniel859.replit.app" 
                   class="calculator-frame"
-                  title="Removal Company Valuation Calculator"
+                  title="Business Valuation Calculator"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
         </div>
