--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-      <a class="btn-getstarted" href="https://business-valuation-calculator-daniel859.replit.app" aria-label="Start your business valuation">Get Started</a>
+      <a class="btn-getstarted" href="https://calendly.com/forlegacy/intro?month=2024-10" aria-label="Start your business valuation">Get Started</a>
 
     </div>
   </header>
