--- a/sell-your-business.html
+++ b/sell-your-business.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>For Legacy Investment Ltd</title>
+  <title>For Legacy Ltd</title>
   <meta name="description" content="“For Legacy – Expert business succession solutions for retiring owners. We buy businesses directly, preserving your legacy, business name, and operations with a seamless, stress-free transition.">
   <meta name="keywords" content="Business Legacy, Legacy Preservation, Business Transition, Stewardship Acquisition, Succession Planning, Boomer Business Transition, Family Business, Construction Business, Retirement Planning, Business Acquisition, Long-Term Business Growth, Generational Business Transfer">
   <meta name="google-site-verification" content="your-verification-code">
