--- a/valuation.html
+++ b/valuation.html
@@ -88,8 +88,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
-        <h1 class="sitename">For Legacy</h1>
-        <span>.</span>
+        <img src="assets/img/logo.png" alt="For Legacy Logo">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -128,7 +127,12 @@
   <footer id="footer" class="footer dark-background">
     <div class="container">
       <div class="copyright text-center">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">For Legacy</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1">For Legacy</strong> <span>All Rights Reserved</span></p>
+      </div>
+      <div class="col-lg-4 col-md-6 footer-about">
+        <a href="index.html" class="logo d-flex align-items-center">
+          <img src="assets/img/logo.png" alt="For Legacy Logo">
+        </a>
       </div>
     </div>
   </footer>
