--- a/sell-your-business.html
+++ b/sell-your-business.html
@@ -172,11 +172,8 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">For Legacy</h1>
-        <span>.</span>
+      <a href="index.html" class="logo d-flex align-items-center">
+        <img src="assets/img/logo.png" alt="For Legacy Logo">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -645,7 +642,7 @@
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
             <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename">For Legacy</span>
+              <img src="assets/img/logo.png" alt="For Legacy Logo">
             </a>
             <div class="footer-contact pt-3">
               <p>12 Lagham Park,</p>
@@ -690,7 +687,7 @@
     </div>
     <div class="copyright">
       <div class="container text-center">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">For Legacy</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1">For Legacy</strong> <span>All Rights Reserved</span></p>
         <div class="credits">
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>      </div>
